Add basic auth and React frontend
